# idc-platform

./: .codegraph  .env.production  .gitignore  README.md
.omo/: boulder.json
.omo/drafts/: idc-platform-v1.md
.omo/plans/: idc-platform-v1-appendix-api.md  (+5 more)
backend/: CMakeLists.txt  Makefile  config.json
backend/cmake/: FindHiredis.cmake  FindJsoncpp.cmake  FindUUID.cmake
backend/migrations/: 001_init.sql  002_order_timeline.sql  003_subscription_upgrades.sql  004_billing_records.sql  005_metered_records.sql  006_dunning.sql  007_payment_indexes.sql  007_zjmf_integration.sql  008_provisioning.sql  009_register.sql  README.md
backend/src/: main.cc
backend/src/controllers/: auth_controller.cc  auth_controller.h  balance_controller.cc  balance_controller.h  bandwidth_controller.cc  bandwidth_controller.h  billing_controller.cc  billing_controller.h  cart_controller.cc  cart_controller.h  dashboard_controller.cc  dashboard_controller.h  distributor_controller.cc  distributor_controller.h  invoice_controller.cc  invoice_controller.h  metered_controller.cc  metered_controller.h  order_controller.cc  order_controller.h  payment_controller.cc  payment_controller.h  price_template_controller.cc  price_template_controller.h  product_controller.cc  product_controller.h  provisioning_controller.cc  provisioning_controller.h  setup_controller.cc  setup_controller.h  subscription_controller.cc  subscription_controller.h  user_controller.cc  user_controller.h  zjmf_controller.cc  zjmf_controller.h
backend/src/cron/: billing_cron.cc  billing_cron.h  dunning_cron.cc  dunning_cron.h  zjmf_sync_cron.cc  zjmf_sync_cron.h
backend/src/filters/: jwt_filter.cc  jwt_filter.h  rbac_filter.cc  rbac_filter.h
backend/src/models/: order_state_machine.h  subscription_state_machine.h
backend/src/services/: addon_billing.cc  addon_billing.h  balance_service.cc  balance_service.h  bandwidth_billing.cc  bandwidth_billing.h  bandwidth_sampler.cc  bandwidth_sampler.h  billing_engine.cc  billing_engine.h  distributor_service.cc  distributor_service.h  dunning_service.cc  dunning_service.h  invoice_service.cc  invoice_service.h  metered_billing.cc  metered_billing.h  order_service.cc  order_service.h  payment_service.cc  payment_service.h  pdf_service.cc  pdf_service.h  pricing_service.cc  pricing_service.h  product_service.cc  product_service.h  subscription_service.cc  subscription_service.h  zjmf_adapter.cc  zjmf_adapter.h  zjmf_finance_adapter.cc  zjmf_finance_adapter.h  zjmf_provisioning_service.cc  zjmf_provisioning_service.h  zjmf_sync_service.cc  zjmf_sync_service.h  zjmf_v10_adapter.cc  zjmf_v10_adapter.h
backend/src/utils/: access_helpers.h  ali_pay.cc  ali_pay.h  config.h  crypto.cc  crypto.h  db_client.h  error_handler.h  http_client.cc  http_client.h  jwt.cc  jwt.h  logger.h  password.cc  password.h  rate_limiter.cc  rate_limiter.h  redis_client.h  response.h  wechat_pay.cc  wechat_pay.h
docker/: Dockerfile.backend  docker-compose.yml
docs/: deployment.md  operations.md  宝塔面板安装指南.md
frontend/: .env.development  .env.production  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
scripts/: backup.sh  deploy.sh
tests/: api_test.sh
(+51 files in other folders)
